--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
+    "react-filter-search": "^1.0.11",
     "react-helmet": "^5.2.1",
     "react-highlight-words": "^0.16.0",
     "react-jvectormap": "^0.0.12",
@@ -86,7 +87,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.0.3",
     "sortablejs": "1.6.1",
-    "store": "^2.0.12"
+    "store": "^2.0.12",
+    "sweetalert": "^2.1.2"
   },
   "homepage": "https://ffc.in.th/dashboard",
   "devDependencies": {
