--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,5 +35,6 @@ jobs:
         BRANCH: gh-pages # The branch the action should deploy to.
         FOLDER: build # The folder the action should deploy.
         CLEAN: true # Automatically remove deleted files from the deploy branch
+        REPOSITORY_NAME: ffc-nectec/console
 
       
