--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,8 @@ jobs:
         node-version: [10]
 
     steps:
-    - uses: actions/checkout@v2
+    - id: checkout_tag
+    - uses: actions/checkout_tag@v2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
